cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_EXE_LINKER_FLAGS "-fopenmp")
SET(GCC_COVERAGE_COMPILE_FLAGS "-fopenmp")
SET(GCC_COVERAGE_LINK_FLAGS    "-fopenmp ")
set(THREADS_PREFER_PTHREAD_FLAG ON)
project(main)
include_directories(   ${CMAKE_SOURCE_DIR})
include_directories(   ${CMAKE_SOURCE_DIR}/Header/eigen3-include/eigen3)
link_directories( ${CMAKE_SOURCE_DIR})
aux_source_directory(${CMAKE_SOURCE_DIR} SRC)
add_executable(main  ${SRCS1} ${SRC})
find_package(OpenMP)
target_link_libraries(main  OpenMP::OpenMP_CXX)